Reverting all the changes to these files that were done just after rev. 767392. All these changes break the normal packing process as to pack an order, it should be verified first through "Verify Pick" screen in facility (new feature). This issue has also been reported by Jacques on mailing list. With this revert packing will work as normal i.e. No verify pick required. Please report back any error if you see any just because of these changes and we will try to fix them asap. Also sorry for this big revert. Note: I will be adding back the securing URLs in FTL changes which are also being reverted because of this commit.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@781008 13f79535-47bb-0310-9956-ffa450edef68